# aoc-2023

./: README.md  pyproject.toml
src/: day1.py  day2.py  day3.py  day4.py  day5.py
tests/: day1_test.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py
