[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["João Victor Teófilo Salgado <jvictorteo2000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
